--- a/elena/scss/main.scss
+++ b/elena/scss/main.scss
@@ -40,6 +40,13 @@
 @import "components/thumbnail";
 
 // Page specific styles
+@import "page/profesionals";
+@import "page/reponsive";
+@import "page/layered";
+@import "page/fully";
+@import "page/send";
+@import "page/themforest";
+@import "page/template";
 
 
 
