--- a/elena/scss/base/_typography.scss
+++ b/elena/scss/base/_typography.scss
@@ -2,14 +2,9 @@
 
 html, body {
   font-size: 14px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'PT Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
-    h1 {
-        font-family: Raleway, sans-serif;
-    }
-    h3 {
-        font-family: OpenSans-Bold, sans-serif;
-    }
+
   @media #{$info-tablet-big} {
     font-size: 15px;
   }
