--- a/elena/scss/page/_profesionals.scss
+++ b/elena/scss/page/_profesionals.scss
@@ -22,6 +22,8 @@
                 }
                 p {
                     color: #787b80;
+                    margin-bottom: 0;
+
                 }
                 .personal {
                     margin-top: 10px;
