--- a/elena/scss/page/_send.scss
+++ b/elena/scss/page/_send.scss
@@ -1,6 +1,6 @@
 .send {
     background-color: #eeeeef;
-    padding: 60px 0;
+    padding: 63px 0 61px 0;
     .container {
         .clearfix {
 
@@ -15,7 +15,6 @@
                         font-size: 18px;
                         font-weight: 700;
                         margin: 0;
-
                     }
                 }
                 .border {
@@ -24,14 +23,14 @@
                 }
                 p {
                     color: #787b80;
-                    margin-bottom: 25px;
-                    margin-top: 20px;
+                    margin-bottom: 35px;
+                    margin-top: 25px;
                 }
                 button {
                     color: #ffffff;
                     background-color: #50c3af;
                     border-radius: 20px;
-                    padding: 10px 15px;
+                    padding: 8px 15px;
                     border: 0;
                     font-size: 15px;
                     &:hover {
