--- a/elena/css/main.css
+++ b/elena/css/main.css
@@ -3237,7 +3237,7 @@ html, body {
       font-family: 'Ubuntu', sans-serif;
       font-weight: 700;
       color: #ffffff;
-      margin: 0 0 30px 0; }
+      margin: 0 0 20px 0; }
     .header .content-header h2 {
       text-align: center;
       text-transform: uppercase; }
@@ -3253,7 +3253,7 @@ html, body {
         font-weight: 700;
         color: #ffffff;
         font-size: 15px;
-        margin-bottom: 75px;
+        margin-bottom: 70px;
         padding: 0 30px; }
         .header .content-header h2.no-background span:before, .header .content-header h2.no-background span:after {
           content: '';
@@ -3397,7 +3397,8 @@ html, body {
         border: 1px solid #e2e3e4;
         margin: 20px auto; }
       .profesionals .container .clearfix .col p {
-        color: #787b80; }
+        color: #787b80;
+        margin-bottom: 0; }
       .profesionals .container .clearfix .col .personal {
         margin-top: 10px; }
       .profesionals .container .clearfix .col .heart {
@@ -3418,21 +3419,22 @@ html, body {
     margin: 20px auto; }
   .reponsive .container .clearfix p {
     color: #787b80;
-    padding: 8px 0 30px 0; }
-  .reponsive .container .clearfix button {
+    padding: 5px 0 30px 0;
+    margin-bottom: 0; }
+  .reponsive .container .clearfix .btn-reponsive {
     color: #ffffff;
     background-color: #50c3af;
     border-radius: 20px;
-    padding: 10px 25px;
+    padding: 8px 15px;
     border: 0;
     font-size: 15px; }
-    .reponsive .container .clearfix button:hover {
+    .reponsive .container .clearfix .btn-reponsive:hover {
       color: #666666; }
 
 .layered {
   padding: 60px 0 70px 0; }
   .layered .container .clearfix img {
-    margin-bottom: 40px; }
+    margin-bottom: 37px; }
   .layered .container .clearfix h2 {
     margin: 0;
     font-weight: 700;
@@ -3451,7 +3453,7 @@ html, body {
 
 .fully {
   background-color: #eeeeef;
-  padding: 55px 0 77px 0; }
+  padding: 65px 0; }
   .fully .container .fully-title {
     display: flex; }
     .fully .container .fully-title img {
@@ -3459,8 +3461,7 @@ html, body {
     .fully .container .fully-title h2 {
       font-weight: 700;
       font-size: 18px;
-      margin: 0;
-      padding: 10px 0 0 0; }
+      margin: 0; }
   .fully .container .border {
     margin: 15px 0 20px 0; }
   .fully .container p {
@@ -3470,7 +3471,7 @@ html, body {
     color: #ffffff;
     background-color: #d2d5da;
     border-radius: 20px;
-    padding: 10px 25px;
+    padding: 8px 15px;
     border: 0;
     font-size: 15px; }
     .fully .container button:hover {
@@ -3478,7 +3479,7 @@ html, body {
 
 .send {
   background-color: #eeeeef;
-  padding: 60px 0; }
+  padding: 63px 0 61px 0; }
   .send .container .clearfix .col .send-title {
     display: flex;
     margin-bottom: 15px; }
@@ -3493,13 +3494,13 @@ html, body {
     border: 1px solid #e2e3e4; }
   .send .container .clearfix .col p {
     color: #787b80;
-    margin-bottom: 25px;
-    margin-top: 20px; }
+    margin-bottom: 35px;
+    margin-top: 25px; }
   .send .container .clearfix .col button {
     color: #ffffff;
     background-color: #50c3af;
     border-radius: 20px;
-    padding: 10px 15px;
+    padding: 8px 15px;
     border: 0;
     font-size: 15px; }
     .send .container .clearfix .col button:hover {
@@ -3523,7 +3524,7 @@ html, body {
     color: #ffffff;
     background-color: #d2d5da;
     border-radius: 20px;
-    padding: 10px 25px;
+    padding: 8px 15px;
     border: 0;
     font-size: 15px; }
     .themforest .container .clearfix .content button:hover {
@@ -3531,7 +3532,7 @@ html, body {
 
 .template {
   background-color: #50c3af;
-  padding: 50px 0 70px 0; }
+  padding: 48px 0 70px 0; }
   .template .container {
     text-align: center; }
     .template .container .template-title {
@@ -3542,13 +3543,14 @@ html, body {
         font-weight: 700;
         font-size: 18px;
         color: #ffffff;
-        margin: 0;
-        padding: 10px 0 0 0; }
+        margin: 0; }
     .template .container .border {
       width: 250px;
       border: 1px solid #61c8b6;
-      margin: 20px auto; }
+      margin: 10px auto; }
     .template .container .logo {
       display: flex; }
       .template .container .logo img {
-        padding: 20px 30px 0 30px; }
+        padding: 30px 30px 0 30px; }
+        .template .container .logo img:first-child {
+          padding-left: 0; }
