--- a/elena/scss/page/_fully.scss
+++ b/elena/scss/page/_fully.scss
@@ -1,6 +1,6 @@
 .fully {
     background-color: #eeeeef;
-    padding: 55px 0 77px 0;
+    padding: 65px 0;
     .container {
         .fully-title {
             display: flex;
@@ -11,7 +11,6 @@
                 font-weight: 700;
                 font-size: 18px;
                 margin: 0;
-                padding: 10px 0 0 0;
             }
         }
 
@@ -28,7 +27,7 @@
             color: #ffffff;
             background-color: #d2d5da;
             border-radius: 20px;
-            padding: 10px 25px;
+            padding: 8px 15px;
             border: 0;
             font-size: 15px;
             &:hover {
