--- a/elena/scss/page/_reponsive.scss
+++ b/elena/scss/page/_reponsive.scss
@@ -18,14 +18,16 @@
             }
             p {
                 color: #787b80;
-                padding: 8px 0 30px 0;
+                padding: 5px 0 30px 0;
+
+                margin-bottom: 0;
 
             }
-            button {
+            .btn-reponsive {
                 color: #ffffff;
                 background-color: #50c3af;
                 border-radius: 20px;
-                padding: 10px 25px;
+                padding: 8px 15px;
                 border: 0;
                 font-size: 15px;
                 &:hover {
