--- a/elena/scss/page/_layered.scss
+++ b/elena/scss/page/_layered.scss
@@ -9,6 +9,7 @@
                 margin: 0;
                 font-weight: 700;
                 font-size: 16px;
+                color: #40474e;
             }
             .border {
                 width: 135px;
@@ -18,6 +19,7 @@
             p {
                 color: #787b80;
                 margin-bottom: 20px;
+
             }
             .check {
                 color: #50c3af;
