--- a/elena/scss/layout/_footer.scss
+++ b/elena/scss/layout/_footer.scss
@@ -2,8 +2,12 @@
     background-color: #f5f5f5;
     .container {
         line-height: 57px;
+        .elena {
+            color: #787b80;
+            font-size: 13px;
+        }
         .color {
-            color: #aaacaf;
+            color: #b4b6b8;
         }
         .icon {
             display: flex;
