--- a/elena/scss/layout/_header.scss
+++ b/elena/scss/layout/_header.scss
@@ -95,13 +95,15 @@
         }
 
         button {
-            color: #ffffff;
+            color: #f5f5f5;
             background-color: #50c3af;
-            border-radius: 20px;
+            border-radius: 30px;
             font-weight: 700;
             padding: 15px 45px;
             border: 0;
             font-size: 15px;
+            outline: none;
+            @include css3-prefix('transition', 0.5s);
             &:hover {
                 color: #666666;
             }
