--- a/elena/scss/page/_fully.scss
+++ b/elena/scss/page/_fully.scss
@@ -11,6 +11,7 @@
                 font-weight: 700;
                 font-size: 18px;
                 margin: 0;
+                color: #384048;
             }
         }
 
@@ -29,7 +30,8 @@
             border-radius: 20px;
             padding: 8px 15px;
             border: 0;
-            font-size: 15px;
+            outline: none;
+            @include css3-prefix('transition', 0.5s);
             &:hover {
                 color: #50c3af;
             }
