--- a/elena/scss/page/_profesionals.scss
+++ b/elena/scss/page/_profesionals.scss
@@ -13,6 +13,7 @@
                     margin-top: 0;
                     font-weight: 700;
                     font-size: 16px;
+                    color: #40474e;
                 }
                 .border {
                     width: 135px;
