--- a/elena/scss/page/_send.scss
+++ b/elena/scss/page/_send.scss
@@ -15,6 +15,7 @@
                         font-size: 18px;
                         font-weight: 700;
                         margin: 0;
+                        color: #40474e;
                     }
                 }
                 .border {
@@ -32,7 +33,8 @@
                     border-radius: 20px;
                     padding: 8px 15px;
                     border: 0;
-                    font-size: 15px;
+                    outline: none;
+                    @include css3-prefix('transition', 0.5s);
                     &:hover {
                         color: #666666;
                     }
