--- a/elena/scss/page/_themforest.scss
+++ b/elena/scss/page/_themforest.scss
@@ -7,6 +7,7 @@
                     font-size: 18px;
                     font-weight: 700;
                     margin: 0;
+                    color: #40474e;
                 }
                 .border {
                     margin-top: 20px;
@@ -25,7 +26,8 @@
                     border-radius: 20px;
                     padding: 8px 15px;
                     border: 0;
-                    font-size: 15px;
+                    outline: none;
+                    @include css3-prefix('transition', 0.5s);
                     &:hover {
                         color: #50c3af;
                     }
