--- a/elena/css/main.css
+++ b/elena/css/main.css
@@ -3208,15 +3208,15 @@ html, body {
       display: flex;
       justify-content: center;
       margin-bottom: 65px; }
-      .header .content-header ul .active {
-        color: #000000; }
-      .header .content-header ul .active {
-        color: #666666; }
+      .header .content-header ul .active a {
+        color: #9d9d9d; }
       .header .content-header ul li {
         padding-right: 35px;
         font-size: 13px;
         font-family: OpenSans, sans-serif;
         font-weight: 500; }
+        .header .content-header ul li:hover a {
+          color: #9d9d9d; }
         .header .content-header ul li a {
           color: #ffffff;
           padding: 0;
@@ -3226,12 +3226,16 @@ html, body {
           -ms-transition: 0.5s;
           -o-transition: 0.5s;
           transition: 0.5s; }
+          .header .content-header ul li a:focus {
+            color: #50c3af;
+            background-color: transparent; }
           .header .content-header ul li a:hover {
             background-color: transparent; }
-          .header .content-header ul li a:focus {
+          .header .content-header ul li a:visited {
             background-color: transparent; }
-        .header .content-header ul li:hover a {
-          color: #666666; }
+          .header .content-header ul li a:active {
+            background-color: transparent;
+            color: #50c3af; }
     .header .content-header h1 {
       font-size: 53px;
       font-family: 'Ubuntu', sans-serif;
@@ -3290,7 +3294,8 @@ html, body {
     line-height: 57px; }
     .footer .container .elena {
       color: #787b80;
-      font-size: 13px; }
+      font-size: 13px;
+      margin-left: 5px; }
     .footer .container .color {
       color: #b4b6b8; }
     .footer .container .icon {
@@ -3298,6 +3303,8 @@ html, body {
       float: right; }
       .footer .container .icon a img {
         margin-right: 15px; }
+      .footer .container .icon a:last-child img {
+        margin-right: 0; }
 
 .navbar-custom {
   padding: 10px 0; }
@@ -3395,7 +3402,7 @@ html, body {
   .profesionals .container {
     text-align: center; }
     .profesionals .container .clearfix .col {
-      padding: 0 15px; }
+      padding: 0 12px; }
       .profesionals .container .clearfix .col img {
         margin-bottom: 30px; }
       .profesionals .container .clearfix .col h3 {
@@ -3414,30 +3421,36 @@ html, body {
         margin-top: 10px; }
       .profesionals .container .clearfix .col .heart {
         margin-top: 5px; }
+      .profesionals .container .clearfix .col:first-child {
+        padding-left: 4px;
+        padding-right: 20px; }
+      .profesionals .container .clearfix .col:last-child {
+        padding-left: 20px;
+        padding-right: 4px; }
 
 .reponsive {
-  padding: 65px 0 77px 0; }
-  .reponsive .container .clearfix img {
+  padding: 65px 0 77px 0;
+  background-color: #f5f5f5; }
+  .reponsive .container .clearfix .col img {
     margin-bottom: 40px;
     max-width: 100%; }
-  .reponsive .container .clearfix h2 {
+  .reponsive .container .clearfix .col h2 {
     font-weight: 700;
     font-size: 18px;
     margin: 0 0 3px 0;
     color: #40474e; }
-  .reponsive .container .clearfix .border {
-    width: 135px;
-    border: 1px solid #ebecec;
-    margin: 20px auto; }
-  .reponsive .container .clearfix p {
+  .reponsive .container .clearfix .col img {
+    margin: 20px auto;
+    max-width: 100%; }
+  .reponsive .container .clearfix .col p {
     color: #787b80;
     padding: 5px 0 30px 0;
     margin-bottom: 0; }
-  .reponsive .container .clearfix .btn-reponsive {
+  .reponsive .container .clearfix .col .btn-reponsive {
     color: #ffffff;
     background-color: #50c3af;
     border-radius: 20px;
-    padding: 8px 15px;
+    padding: 8px 18px;
     border: 0;
     outline: none;
     -webkit-transition: 0.5s;
@@ -3446,29 +3459,44 @@ html, body {
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s; }
-    .reponsive .container .clearfix .btn-reponsive:hover {
+    .reponsive .container .clearfix .col .btn-reponsive:hover {
       color: #666666; }
+  .reponsive .container .clearfix .col:first-child {
+    padding-left: 0;
+    padding-right: 30px; }
+  .reponsive .container .clearfix .col:last-child {
+    padding-right: 0;
+    padding-left: 30px; }
 
 .layered {
-  padding: 60px 0 70px 0; }
-  .layered .container .clearfix img {
-    margin-bottom: 37px; }
-  .layered .container .clearfix h2 {
-    margin: 0;
-    font-weight: 700;
-    font-size: 16px;
-    color: #40474e; }
-  .layered .container .clearfix .border {
-    width: 135px;
-    border: 1px solid #e2e3e4;
-    margin: 20px auto; }
-  .layered .container .clearfix p {
-    color: #787b80;
-    margin-bottom: 20px; }
-  .layered .container .clearfix .check {
-    color: #50c3af;
-    margin: 0;
-    cursor: pointer; }
+  padding: 60px 0 70px 0;
+  background-color: #f5f5f5; }
+  .layered .container .clearfix .col {
+    padding: 0 8px; }
+    .layered .container .clearfix .col img {
+      margin-bottom: 37px; }
+    .layered .container .clearfix .col h2 {
+      margin: 0;
+      font-weight: 700;
+      font-size: 16px;
+      color: #40474e; }
+    .layered .container .clearfix .col .border {
+      margin: 15px auto;
+      max-width: 100%; }
+    .layered .container .clearfix .col p {
+      color: #787b80;
+      margin-bottom: 20px;
+      margin-top: 5px; }
+    .layered .container .clearfix .col .check {
+      color: #50c3af;
+      margin: 0;
+      cursor: pointer; }
+    .layered .container .clearfix .col:first-child {
+      padding-left: 0;
+      padding-right: 16px; }
+    .layered .container .clearfix .col:last-child {
+      padding-right: 0;
+      padding-left: 16px; }
 
 .fully {
   background-color: #eeeeef;
@@ -3476,22 +3504,27 @@ html, body {
   .fully .container .fully-title {
     display: flex; }
     .fully .container .fully-title img {
-      margin-right: 20px; }
+      margin-right: 15px;
+      max-width: 100%; }
     .fully .container .fully-title h2 {
       font-weight: 700;
       font-size: 18px;
       margin: 0;
-      color: #384048; }
+      color: #384048;
+      position: relative;
+      top: 2px; }
   .fully .container .border {
-    margin: 15px 0 20px 0; }
+    max-width: 100%;
+    margin: 20px 0; }
   .fully .container p {
     color: #787b80;
-    margin-bottom: 35px; }
+    margin-bottom: 35px;
+    line-height: 1.5rem; }
   .fully .container button {
     color: #ffffff;
     background-color: #d2d5da;
     border-radius: 20px;
-    padding: 8px 15px;
+    padding: 8px 18px;
     border: 0;
     outline: none;
     -webkit-transition: 0.5s;
@@ -3505,10 +3538,16 @@ html, body {
 
 .send {
   background-color: #eeeeef;
-  padding: 63px 0 61px 0; }
+  padding: 60px 0; }
+  .send .container .clearfix .col:first-child {
+    padding-left: 0;
+    padding-right: 35px; }
+  .send .container .clearfix .col:last-child {
+    padding-left: 35px;
+    padding-right: 0; }
   .send .container .clearfix .col .send-title {
     display: flex;
-    margin-bottom: 15px; }
+    margin-bottom: 10px; }
     .send .container .clearfix .col .send-title img {
       margin-right: 15px; }
     .send .container .clearfix .col .send-title h2 {
@@ -3517,17 +3556,16 @@ html, body {
       margin: 0;
       color: #40474e; }
   .send .container .clearfix .col .border {
-    width: 250px;
-    border: 1px solid #e2e3e4; }
+    max-width: 100%; }
   .send .container .clearfix .col p {
     color: #787b80;
     margin-bottom: 35px;
-    margin-top: 25px; }
+    margin-top: 20px; }
   .send .container .clearfix .col button {
     color: #ffffff;
     background-color: #50c3af;
     border-radius: 20px;
-    padding: 8px 15px;
+    padding: 8px 18px;
     border: 0;
     outline: none;
     -webkit-transition: 0.5s;
@@ -3540,35 +3578,39 @@ html, body {
       color: #666666; }
 
 .themforest {
-  padding: 60px 0 60px 0; }
-  .themforest .container .clearfix .content h2 {
-    font-size: 18px;
-    font-weight: 700;
-    margin: 0;
-    color: #40474e; }
-  .themforest .container .clearfix .content .border {
-    margin-top: 20px;
-    width: 250px;
-    border: 1px solid #e2e3e4; }
-  .themforest .container .clearfix .content p {
-    color: #787b80;
-    margin-bottom: 30px;
-    margin-top: 30px; }
-  .themforest .container .clearfix .content button {
-    color: #ffffff;
-    background-color: #d2d5da;
-    border-radius: 20px;
-    padding: 8px 15px;
-    border: 0;
-    outline: none;
-    -webkit-transition: 0.5s;
-    -khtml-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -ms-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s; }
-    .themforest .container .clearfix .content button:hover {
-      color: #50c3af; }
+  padding: 60px 0 60px 0;
+  background-color: #f5f5f5; }
+  .themforest .container .clearfix .img {
+    padding: 0; }
+  .themforest .container .clearfix .content {
+    padding: 0; }
+    .themforest .container .clearfix .content h2 {
+      font-size: 18px;
+      font-weight: 700;
+      margin: 0;
+      color: #40474e; }
+    .themforest .container .clearfix .content .border {
+      margin-top: 20px;
+      max-width: 100%; }
+    .themforest .container .clearfix .content p {
+      color: #787b80;
+      margin-bottom: 30px;
+      margin-top: 30px; }
+    .themforest .container .clearfix .content button {
+      color: #ffffff;
+      background-color: #d2d5da;
+      border-radius: 20px;
+      padding: 8px 18px;
+      border: 0;
+      outline: none;
+      -webkit-transition: 0.5s;
+      -khtml-transition: 0.5s;
+      -moz-transition: 0.5s;
+      -ms-transition: 0.5s;
+      -o-transition: 0.5s;
+      transition: 0.5s; }
+      .themforest .container .clearfix .content button:hover {
+        color: #50c3af; }
 
 .template {
   background-color: #50c3af;
@@ -3583,14 +3625,29 @@ html, body {
         font-weight: 700;
         font-size: 15px;
         color: #ffffff;
-        margin: 0; }
+        margin: 0;
+        position: relative;
+        top: 5px; }
     .template .container .border {
       width: 250px;
       border: 1px solid #61c8b6;
-      margin: 10px auto; }
+      margin: 15px auto; }
     .template .container .logo {
-      display: flex; }
-      .template .container .logo img {
-        padding: 30px 30px 0 30px; }
-        .template .container .logo img:first-child {
-          padding-left: 0; }
+      margin-top: 40px; }
+      .template .container .logo .col:first-child {
+        padding-left: 0; }
+        .template .container .logo .col:first-child img {
+          position: relative;
+          left: -5px; }
+      .template .container .logo .col:last-child {
+        padding-right: 0; }
+        .template .container .logo .col:last-child img {
+          position: relative;
+          right: -17px;
+          top: 3px; }
+      .template .container .logo .promail {
+        position: relative;
+        right: -7px; }
+      .template .container .logo .mashabale {
+        position: relative;
+        right: -20px; }
