--- a/elena/scss/layout/_header.scss
+++ b/elena/scss/layout/_header.scss
@@ -17,33 +17,42 @@
             justify-content: center;
             margin-bottom: 65px;
             .active {
-                color: #000000;
-            }
-
-            .active {
-                color: #666666;
+                a {
+                    color: #9d9d9d;
+                }
             }
             li {
                 padding-right: 35px;
                 font-size: 13px;
                 font-family: OpenSans, sans-serif;
                 font-weight: 500;
+
+                &:hover {
+                    a {
+                        color: #9d9d9d;
+                    }
+                }
                 a {
                     color: #ffffff;
                     padding: 0;
                     @include css3-prefix('transition', 0.5s);
+                    &:focus {
+                        color: #50c3af;
+                        background-color: transparent;
+                    }
                     &:hover {
                         background-color: transparent;
                     }
-                    &:focus {
+                    &:visited {
                         background-color: transparent;
                     }
-                }
-                &:hover {
-                    a {
-                        color: #666666;
+                    &:active {
+                        background-color: transparent;
+                        color: #50c3af;
                     }
+
                 }
+
             }
 
         }
