--- a/elena/scss/page/_fully.scss
+++ b/elena/scss/page/_fully.scss
@@ -5,30 +5,35 @@
         .fully-title {
             display: flex;
             img {
-                margin-right: 20px;
+                margin-right: 15px;
+                max-width: 100%;
             }
             h2 {
                 font-weight: 700;
                 font-size: 18px;
                 margin: 0;
                 color: #384048;
+                position: relative;
+                top: 2px;
             }
         }
 
         .border {
-           margin: 15px 0 20px 0;
+            max-width: 100%;
+            margin: 20px 0;
 
 
         }
         p {
             color: #787b80;
             margin-bottom: 35px;
+            line-height: 1.5rem;
         }
         button {
             color: #ffffff;
             background-color: #d2d5da;
             border-radius: 20px;
-            padding: 8px 15px;
+            padding: 8px 18px;
             border: 0;
             outline: none;
             @include css3-prefix('transition', 0.5s);
