--- a/elena/scss/page/_layered.scss
+++ b/elena/scss/page/_layered.scss
@@ -1,30 +1,42 @@
 .layered {
     padding: 60px 0 70px 0 ;
+    background-color: #f5f5f5;
     .container {
         .clearfix {
-            img {
-                margin-bottom: 37px;
-            }
-            h2 {
-                margin: 0;
-                font-weight: 700;
-                font-size: 16px;
-                color: #40474e;
-            }
-            .border {
-                width: 135px;
-                border: 1px solid #e2e3e4;
-                margin: 20px auto;
-            }
-            p {
-                color: #787b80;
-                margin-bottom: 20px;
-
-            }
-            .check {
-                color: #50c3af;
-                margin: 0;
-                cursor: pointer;
+            .col {
+                padding: 0 8px;
+                img {
+                    margin-bottom: 37px;
+                }
+                h2 {
+                    margin: 0;
+                    font-weight: 700;
+                    font-size: 16px;
+                    color: #40474e;
+                }
+                .border {
+                    margin: 15px auto;
+                    max-width: 100%;
+                }
+                p {
+                    color: #787b80;
+                    margin-bottom: 20px;
+                    margin-top: 5px;
+                    line-height: 1.5rem;
+                }
+                .check {
+                    color: #50c3af;
+                    margin: 0;
+                    cursor: pointer;
+                }
+                &:first-child {
+                    padding-left: 0;
+                    padding-right: 16px;
+                }
+                &:last-child {
+                    padding-right: 0;
+                    padding-left: 16px;
+                }
             }
         }
 
