--- a/elena/scss/page/_profesionals.scss
+++ b/elena/scss/page/_profesionals.scss
@@ -5,7 +5,7 @@
         text-align: center;
         .clearfix {
             .col {
-                padding: 0 15px;
+                padding: 0 12px;
                 img {
                     margin-bottom: 30px;
                 }
@@ -31,6 +31,15 @@
                 }
                 .heart {
                     margin-top: 5px;
+                }
+                &:first-child {
+                    padding-left: 4px;
+                    padding-right: 20px;
+                }
+                &:last-child {
+                    padding-left: 20px;
+                    padding-right: 4px;
+
                 }
             }
         }
