--- a/elena/scss/page/_reponsive.scss
+++ b/elena/scss/page/_reponsive.scss
@@ -1,41 +1,55 @@
 .reponsive {
     padding: 65px 0 77px 0;
+    background-color: #f5f5f5;
     .container {
         .clearfix {
-            img {
-                margin-bottom: 40px;
-                max-width: 100%;
-            }
-            h2 {
-                font-weight: 700;
-                font-size: 18px;
-                margin: 0 0 3px 0;
-                color: #40474e;
-            }
-            .border {
-                width: 135px;
-                border: 1px solid #ebecec;
-                margin: 20px auto;
-            }
-            p {
-                color: #787b80;
-                padding: 5px 0 30px 0;
+            .col {
+                img {
+                    margin-bottom: 40px;
+                    max-width: 100%;
+                }
+                h2 {
+                    font-weight: 700;
+                    font-size: 18px;
+                    margin: 0 0 3px 0;
+                    color: #40474e;
+                }
+                img {
+                    margin: 20px auto;
+                    max-width: 100%;
+                }
+                p {
+                    color: #787b80;
+                    padding: 5px 0 30px 0;
 
-                margin-bottom: 0;
+                    margin-bottom: 0;
 
-            }
-            .btn-reponsive {
-                color: #ffffff;
-                background-color: #50c3af;
-                border-radius: 20px;
-                padding: 8px 15px;
-                border: 0;
-                outline: none;
-                @include css3-prefix('transition', 0.5s);
-                &:hover {
-                    color: #666666;
+                }
+                .btn-reponsive {
+                    color: #ffffff;
+                    background-color: #50c3af;
+                    border-radius: 20px;
+                    padding: 8px 18px;
+                    border: 0;
+                    outline: none;
+                    @include css3-prefix('transition', 0.5s);
+                    &:hover {
+                        color: #666666;
+                    }
+                }
+                &:first-child {
+                    padding-left: 0;
+                    padding-right: 30px;
+
+                }
+                &:last-child {
+                    padding-right: 0;
+                    padding-left: 30px;
+
+
                 }
             }
+
         }
     }
 }
