--- a/elena/scss/page/_send.scss
+++ b/elena/scss/page/_send.scss
@@ -1,13 +1,21 @@
 .send {
     background-color: #eeeeef;
-    padding: 63px 0 61px 0;
+    padding: 60px 0;
     .container {
         .clearfix {
-
             .col {
+                &:first-child {
+                    padding-left: 0;
+                    padding-right: 35px;
+                }
+                &:last-child {
+                    padding-left: 35px;
+                    padding-right: 0;
+
+                }
                 .send-title {
                     display: flex;
-                    margin-bottom: 15px;
+                    margin-bottom: 10px;
                     img {
                         margin-right: 15px;
                     }
@@ -19,19 +27,18 @@
                     }
                 }
                 .border {
-                    width: 250px;
-                    border: 1px solid #e2e3e4;
+                    max-width: 100%;
                 }
                 p {
                     color: #787b80;
                     margin-bottom: 35px;
-                    margin-top: 25px;
+                    margin-top: 20px;
                 }
                 button {
                     color: #ffffff;
                     background-color: #50c3af;
                     border-radius: 20px;
-                    padding: 8px 15px;
+                    padding: 8px 18px;
                     border: 0;
                     outline: none;
                     @include css3-prefix('transition', 0.5s);
