--- a/elena/scss/page/_template.scss
+++ b/elena/scss/page/_template.scss
@@ -14,23 +14,49 @@
                 font-size: 15px;
                 color: #ffffff;
                 margin: 0;
-
+                position: relative;
+                top: 5px;
             }
         }
         .border {
             width: 250px;
             border: 1px solid #61c8b6;
-            margin: 10px auto;
+            margin: 15px auto;
         }
         .logo {
-            display: flex;
-            img {
-                padding: 30px 30px 0 30px;
+            margin-top: 40px;
+            .col {
+                img {
+                }
                 &:first-child {
                     padding-left: 0;
+                    img {
+                        position: relative;
+                        left: -5px;
+                    }
+                }
+                &:last-child {
+                    padding-right: 0;
+
+
+                    img {
+                        position: relative;
+                        right: -17px;
+                        top: 3px;
+                    }
                 }
 
             }
+            .promail {
+                position: relative;
+                right: -7px;
+            }
+            .mashabale {
+                position: relative;
+                right: -20px;
+
+            }
+
         }
     }
 
