--- a/elena/scss/page/_themforest.scss
+++ b/elena/scss/page/_themforest.scss
@@ -1,8 +1,13 @@
 .themforest {
     padding: 60px 0 60px 0;
+    background-color: #f5f5f5;
     .container {
         .clearfix {
+            .img {
+                padding: 0;
+            }
             .content {
+                padding: 0;
                 h2 {
                     font-size: 18px;
                     font-weight: 700;
@@ -11,20 +16,20 @@
                 }
                 .border {
                     margin-top: 20px;
-                    width: 250px;
-                    border: 1px solid #e2e3e4;
+                    max-width: 100%;
                 }
                 p {
                     color: #787b80;
                     margin-bottom: 30px;
                     margin-top: 30px;
+
                 }
 
                 button {
                     color: #ffffff;
                     background-color: #d2d5da;
                     border-radius: 20px;
-                    padding: 8px 15px;
+                    padding: 8px 18px;
                     border: 0;
                     outline: none;
                     @include css3-prefix('transition', 0.5s);
