--- a/elena/scss/layout/_header.scss
+++ b/elena/scss/layout/_header.scss
@@ -56,12 +56,15 @@
             }
 
         }
-        h1 {
+        .title-header {
             font-size: 53px;
             font-family: 'Ubuntu', sans-serif;
             font-weight: 700;
             color: #ffffff;
-            margin: 0 0 20px 0;
+
+            margin-bottom: 0;
+
+
         }
 
         h2 {
@@ -72,7 +75,8 @@
         h2.no-background {
             position: relative;
             overflow: hidden;
-
+            margin-top: 17px;
+            margin-bottom: 8px;
             span {
                 display: inline-block;
                 vertical-align: baseline;
@@ -89,7 +93,7 @@
                     display: block;
                     width: 100px;
                     position: absolute;
-                    top: 0.73em;
+                    top: 0.5em;
                     border-top: 2px solid #516b71;
 
                 }
