--- a/elena/scss/page/_layered.scss
+++ b/elena/scss/page/_layered.scss
@@ -7,6 +7,7 @@
                 padding: 0 8px;
                 img {
                     margin-bottom: 37px;
+                    width: 100%;
                 }
                 h2 {
                     margin: 0;
