--- a/elena/css/main.css
+++ b/elena/css/main.css
@@ -3405,8 +3405,8 @@ html, body {
     text-align: center; }
     .profesionals .container .clearfix .col {
       padding: 0 12px; }
-      .profesionals .container .clearfix .col img {
-        margin-bottom: 30px; }
+      .profesionals .container .clearfix .col .img-fix {
+        height: 72px; }
       .profesionals .container .clearfix .col h3 {
         margin-top: 0;
         font-weight: 700;
