--- a/elena/scss/page/_profesionals.scss
+++ b/elena/scss/page/_profesionals.scss
@@ -6,9 +6,10 @@
         .clearfix {
             .col {
                 padding: 0 12px;
-                img {
-                    margin-bottom: 30px;
+                .img-fix {
+                    height: 72px;
                 }
+
                 h3 {
                     margin-top: 0;
                     font-weight: 700;
