--- a/musican/scss/main.scss
+++ b/musican/scss/main.scss
@@ -40,17 +40,7 @@
 @import "components/thumbnail";
 
 // Page specific styles
-@import "page/slider";
-@import "page/body";
-@import "page/footer";
-@import "page/tab";
-@import "page/sub-list";
-@import "page/standard-picture";
-@import "page/awesome";
-@import "page/pricing-option";
-@import "page/styllish-axure";
-@import "page/contact";
-@import "page/customer";
+@import "page/discography";
 
 
 
