--- a/musican/scss/main.scss
+++ b/musican/scss/main.scss
@@ -41,6 +41,13 @@
 
 // Page specific styles
 @import "page/discography";
+@import "page/concert";
+@import "page/compositions";
+@import "page/new";
+@import "page/upcoming";
+@import "page/history";
+@import "page/contact";
+
 
 
 
