--- a/musican/scss/base/_typography.scss
+++ b/musican/scss/base/_typography.scss
@@ -62,6 +62,33 @@ html, body {
 
     h2 {
         font-family: 'Dosis', sans-serif;
+        font-size: 50px;
+        margin: 56px 0 40px 0;
+        text-align: center;
+        text-transform: uppercase;
+        letter-spacing: 12px;
+    }
+    .background {
+        position: relative;
+        z-index: 1;
+        &:before {
+            border-top: 2px solid #000000;
+            content: "";
+            margin: 0 auto;
+            position: absolute;
+            top: 50%;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 45%;
+            z-index: -1;
+        }
+        span {
+            padding: 0 15px;
+        }
+    }
+    .color-general {
+        color: #798285;
     }
   @media #{$info-tablet-big} {
     font-size: 15px;
